components/titanium/mantine/blocks/pricing/index.module.css
.highlightedHeaderCell {
  @media (min-width: $mantine-breakpoint-md) {
    background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-9));
    border-radius: var(--mantine-radius-md) var(--mantine-radius-md) 0 0;
    border-left: 1px solid light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-7));
    border-right: 1px solid light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-7));
    border-top: 1px solid light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-7));
  }
}

.highlightedFooterCell {
  @media (min-width: $mantine-breakpoint-md) {
    background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-9));
    border-radius: 0 0 var(--mantine-radius-md) var(--mantine-radius-md);
    border-left: 1px solid light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-7));
    border-right: 1px solid light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-7));
    border-bottom: 1px solid light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-7));
  }
}

.row {
  border-top: 1px solid light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-7));
}

.highlightedRow {
  border-left: 1px solid light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-7));
  border-right: 1px solid light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-7));
  background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-9));
}

.iconOn {
  background-color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
  color: light-dark(var(--mantine-color-white), var(--mantine-color-black));
}

.iconOff {
  color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
}

.highlightedCta {
  background-color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
  color: light-dark(var(--mantine-color-white), var(--mantine-color-black));

  @mixin hover {
    color: light-dark(var(--mantine-color-white), var(--mantine-color-black));
    background-color: light-dark(var(--mantine-color-dark-9), var(--mantine-color-gray-0));
  }
}

